tests/snapshots/examples_fixtures/http__browser_hello_service.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/http/browser_hello_service.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
