tests/snapshots/examples_fixtures/http__hello_http_service.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/http/hello_http_service.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
