tests/snapshots/examples_fixtures/http__json_echo_service.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/http/json_echo_service.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
