tests/snapshots/examples_fixtures/http__sse_broadcaster.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/http/sse_broadcaster.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
