tests/snapshots/examples_fixtures/http__stream_pipeline.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/http/stream_pipeline.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
